fixed some color contrast

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{
     --primary-color:  #003d62;
-    --secondary-color:   #0089b7 ;
+    --secondary-color:   #00ADE6 ;
     --third-color:#003251;
     --text-color:#FFF;
 }
